--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.8.1",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
